[metadata]
name = newebe
version = 0.6.0
author = Gelnior
author-email =
summary = Distributed social network.
description-file = README.rst
home-page = https://github.com/gelnior/newebe
requires-dist =
    setuptools
    Couchdbkit
    Tornado
    pytz
    whoosh
    lxml
    pyyaml
    markdown
classifier =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    newebe/
    newebe/apps
    newebe/apps/pictures
    newebe/apps/notes
    newebe/apps/contacts
    newebe/apps/profile
    newebe/apps/sync
    newebe/apps/auth
    newebe/apps/activities
    newebe/apps/news
    newebe/apps/core
    newebe/apps/commons
    newebe/tools
    newebe/lib
    newebe/client

scripts = newebe/newebe_server

data_files =
    newebe =
        setup.cfg
        setup.py
        README.rst
        LICENSE
        MANIFEST.in

[entry_points]
distutils.setup_keywords =
    d2to1 = d2to1.core:d2to1
zest.releaser.prereleaser.middle =
    d2_version = d2to1.zestreleaser:prereleaser_middle
zest.releaser.postreleaser.middle =
    d2_version = d2to1.zestreleaser:postreleaser_middle
